Squish the footer menu a bit to fit in the new column added in Bug 676020
git-svn-id: svn+ssh://svn.mozilla.org/projects/mozilla.com/trunk@96971 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/style/covehead/template.css
+++ b/style/covehead/template.css
@@ -537,7 +537,7 @@ body {
 #footer-logo {
 	float: left;
 	display: inline;
-	margin: 15px 50px 0 10px;
+	margin: 15px 40px 0 10px;
 }
 
 #footer-logo a,
@@ -565,7 +565,7 @@ body {
 	font-weight: bold;
 	background: none;
 	position: relative;
-	width: 115px;
+	width: 100px;
 }
 
 #footer-menu li a,
@@ -603,7 +603,7 @@ body {
 
 #footer-menu ul ul li {
 	float: none;
-	padding: 0 0 0.3em 0;
+	padding: 0 0 0.4em 0;
 	margin: 0;
 	font-weight: normal;
 	display: block;
@@ -612,11 +612,11 @@ body {
 
 #footer #footer-right {
 	float: right;
-	width: 175px;
+	width: 170px;
 }
 
 #footer #lang_form {
-	margin: 0 0 15px 22px;
+	margin: 0 0 15px 14px;
 }
 
 #footer #lang_form label {
